# digital-system

./: .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
docs/agents/: backlog.md  domain.md  triage-labels.md
docs/design/: smart-manufacturing-digital-twin-design.md
src/smds/: __init__.py
src/smds/digital_twin/: __init__.py  agv_twin.py  base.py  cnc_twin.py  configs.py  enums.py  exceptions.py  manager.py  manufacturing_env.py  models.py  opcua_connector.py  order_manager.py  reward_calculator.py  robot_twin.py  utils.py  warehouse_twin.py
src/smds/scheduler/: __init__.py  agent.py  config.py  network.py  replay_buffer.py  trainer.py
tests/integration/: test_mode_switch.py
tests/unit/: test_circuit_breaker.py  test_cnc_twin.py  test_data_shadow.py  test_dataclasses.py  test_dqn_agent.py  test_manufacturing_env.py  test_reward_calculator.py  test_robot_agv_warehouse.py  test_sync_from_physical.py
