[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smds"
version = "1.0.0"
description = "Smart Manufacturing Digital Twin System"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "torch>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
